--- a/style.css
+++ b/style.css
@@ -101,4 +101,75 @@ body main .container .redes .c-insta img {
 body main .container .redes .c-tw img {
   width: 14px;
   height: 14px;
+}
+
+/*/// version 1440px////*/
+@media screen and (min-width: 1100px) {
+  body {
+    background: url(/images/bg-desktop.svg) no-repeat hsl(257deg, 40%, 49%);
+  }
+  body main {
+    margin: 30px 80px;
+    flex-direction: row;
+    width: 90vw;
+  }
+  body main .container {
+    margin-left: 20px;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+  }
+  body main .container .img {
+    display: flex;
+    grid-column: 3;
+    grid-row: 2;
+  }
+  body main .container .img img {
+    width: 600px;
+    height: 400px;
+    margin-left: -120px;
+  }
+  body main .container .texto {
+    margin-left: 60px;
+    text-align: center;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: left;
+    width: 500px;
+    height: 200px;
+    grid-column: 4/7;
+    grid-row: 2;
+    gap: 10px;
+  }
+  body main .container .texto h1 {
+    font-size: 30px;
+    text-align: left;
+  }
+  body main .container .texto p {
+    font-size: 14px;
+    line-height: 20px;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+  }
+  body main .container .texto button {
+    width: 200px;
+    height: 100px;
+    padding: 10px;
+    margin-top: 10px;
+    align-self: flex-start;
+  }
+  body main .container .redes {
+    grid-column: 6/7;
+    grid-row: 5;
+    align-self: flex-end;
+    margin-top: -30px;
+    padding-right: 20px;
+  }
+  body main .container footer {
+    grid-column: 4/5;
+    grid-row: 6;
+  }
 }/*# sourceMappingURL=style.css.map */
