--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@ $OpenSans:'Open Sans';
 /*///Version mobile 375px///*/
 
 body{
-
+    
     background: url(/images/bg-mobile.svg) no-repeat $Violet;
 
     main{
@@ -138,7 +138,85 @@ body{
             
         }
     }
-    
+}
+}
+
+/*/// version 1440px////*/
+
+@media screen and (min-width:1100px) {
+
+    body{
+        background: url(/images/bg-desktop.svg)
+        no-repeat $Violet;
+
+        main{
+            margin: 30px 80px;
+            flex-direction: row;
+            width: 90vw;
+            .container{
+                margin-left: 20px;
+                display: grid;
+                grid-template-columns:auto;
+                grid-template-rows: auto;
+                
+                .img{
+                    display: flex;
+                    grid-column: 3;
+                    grid-row: 2;
+                    img{
+                        width: 600px;
+                        height: 400px;
+                        margin-left: -120px;
+                    }
+                }
+                .texto{
+                    margin-left: 60px;
+                    text-align: center;
+                    margin-bottom: 100px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: left;
+                    width: 500px;
+                    height: 200px;
+                    grid-column: 4/7;
+                    grid-row: 2;
+                    gap: 10px;
+
+                    h1{
+                        font-size: 30px;
+                        text-align: left;
+                    }
+                    p{  
+
+                        font-size: 14px;
+                        line-height: 20px;
+                        margin: 0;
+                        padding: 0;
+                        text-align: left;
+                    }
+                    button{
+                        width: 200px;
+                        height: 100px;
+                        padding: 10px;
+                        margin-top: 10px;
+                        align-self: flex-start;
+                    }
+                }
+                .redes{
+                    grid-column: 6/7;
+                    grid-row: 5;
+                    align-self: flex-end;
+                    margin-top: -30px;
+                    padding-right: 20px;
+                }
+                footer{
+                    grid-column: 4/5;
+                    grid-row: 6;
+                }
+            }
+
+        }
 
 
 
@@ -149,12 +227,13 @@ body{
 
 
 
-    
+
+
+
+
+
     }
-
-
-
-
+    
 }
 
 
